[metadata]
name = ua-parser
version = 0.15.0
url = https://github.com/kaltura/uap-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 

